[gd_scene load_steps=11 format=3 uid="uid://bu5aahaphq4oa"]

[ext_resource type="PackedScene" uid="uid://d2i15cdabp3yy" path="res://ui/fried_window/fried_window.tscn" id="1_yiog8"]
[ext_resource type="Script" uid="uid://dlb04fb4knqft" path="res://ui/fried_window/join_campaign_window/join_campaign_window.gd" id="2_bm7a7"]
[ext_resource type="Texture2D" uid="uid://bs1udfpmwy6a" path="res://resources/icons/filter_icon.png" id="3_2yyu3"]
[ext_resource type="PackedScene" uid="uid://bdnh40tn0t5yx" path="res://ui/fried_convex_panel/fried_convex_panel.tscn" id="3_33pr6"]
[ext_resource type="Texture2D" uid="uid://mdaepaknysud" path="res://resources/icons/link_icon.png" id="4_3vuw7"]
[ext_resource type="PackedScene" uid="uid://b6o13q7qteh2i" path="res://ui/tabs/tab_elements/draggable_tree/draggable_tree.tscn" id="4_p3wa5"]
[ext_resource type="PackedScene" uid="uid://b3d83roncqixw" path="res://ui/fried_button/fried_button_blue.tscn" id="6_hqpcc"]

[sub_resource type="ButtonGroup" id="ButtonGroup_o2pj6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05vpd"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
border_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2p2k"]

[node name="JoinCampaignWindow" instance=ExtResource("1_yiog8")]
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("2_bm7a7")

[node name="TitleLabel" parent="M/VBoxContainer/TitleBar/H" index="0"]
text = "Join Campaign"

[node name="ServerContainer" type="MarginContainer" parent="M/VBoxContainer/TitleBar/H" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/TitleBar/H/ServerContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SteamButton" type="Button" parent="M/VBoxContainer/TitleBar/H/ServerContainer/H" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_o2pj6")
text = "Steam Network"

[node name="EnetButton" type="Button" parent="M/VBoxContainer/TitleBar/H/ServerContainer/H" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_o2pj6")
text = "Direct Connection"

[node name="V" type="VBoxContainer" parent="M/VBoxContainer/Body" index="0"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="SteamContainer" type="VBoxContainer" parent="M/VBoxContainer/Body/V" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="M2" type="MarginContainer" parent="M/VBoxContainer/Body/V/SteamContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/SteamContainer/M2" index="0"]
layout_mode = 2
text = "Steam campaigns:"

[node name="FriedConvexPanel" parent="M/VBoxContainer/Body/V/SteamContainer" index="1" instance=ExtResource("3_33pr6")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel" index="0"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel/H" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="SteamUsernameLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel/H/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username..."

[node name="SteamHostUserLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel/H/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "Master Steam User..."

[node name="SteamConnectButton" type="Button" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel/H" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("4_3vuw7")
icon_alignment = 2

[node name="HSeparator" type="HSeparator" parent="M/VBoxContainer/Body/V/SteamContainer" index="2"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V/SteamContainer" index="3"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/SteamContainer/M" index="0"]
layout_mode = 2
text = "Saved Steam Connections:"

[node name="FriedConvexPanel2" parent="M/VBoxContainer/Body/V/SteamContainer" index="4" instance=ExtResource("3_33pr6")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel2" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SteamFilterLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel2/H" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filter..."
right_icon = ExtResource("3_2yyu3")

[node name="SteamRefreshButton" parent="M/VBoxContainer/Body/V/SteamContainer/FriedConvexPanel2/H" index="1" instance=ExtResource("6_hqpcc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="C" type="PanelContainer" parent="M/VBoxContainer/Body/V/SteamContainer" index="5"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_05vpd")

[node name="C" type="ScrollContainer" parent="M/VBoxContainer/Body/V/SteamContainer/C" index="0"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_y2p2k")

[node name="SteamTree" parent="M/VBoxContainer/Body/V/SteamContainer/C/C" index="0" instance=ExtResource("4_p3wa5")]
unique_name_in_owner = true
layout_mode = 2
columns = 2
hide_folding = true
select_mode = 1

[node name="EnetContainer" type="VBoxContainer" parent="M/VBoxContainer/Body/V" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="M2" type="MarginContainer" parent="M/VBoxContainer/Body/V/EnetContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/EnetContainer/M2" index="0"]
layout_mode = 2
text = "Direct Connection campaign:"

[node name="FriedConvexPanel2" parent="M/VBoxContainer/Body/V/EnetContainer" index="1" instance=ExtResource("3_33pr6")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel2" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel2/H" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="EnetUsernameLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel2/H/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username..."

[node name="EnetPasswordLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel2/H/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password..."
secret = true

[node name="EnetHostLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel2/H/HBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Host..."

[node name="EnetConnectButton" type="Button" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel2/H" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("4_3vuw7")
icon_alignment = 2

[node name="HSeparator" type="HSeparator" parent="M/VBoxContainer/Body/V/EnetContainer" index="2"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V/EnetContainer" index="3"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/EnetContainer/M" index="0"]
layout_mode = 2
text = "Saved Direct Connections:"

[node name="FriedConvexPanel" parent="M/VBoxContainer/Body/V/EnetContainer" index="4" instance=ExtResource("3_33pr6")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="EnetFilterLineEdit" type="LineEdit" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel/H" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filter..."
right_icon = ExtResource("3_2yyu3")

[node name="EnetRefreshButton" parent="M/VBoxContainer/Body/V/EnetContainer/FriedConvexPanel/H" index="1" instance=ExtResource("6_hqpcc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="C" type="PanelContainer" parent="M/VBoxContainer/Body/V/EnetContainer" index="5"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_05vpd")

[node name="C" type="ScrollContainer" parent="M/VBoxContainer/Body/V/EnetContainer/C" index="0"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_y2p2k")

[node name="EnetTree" parent="M/VBoxContainer/Body/V/EnetContainer/C/C" index="0" instance=ExtResource("4_p3wa5")]
unique_name_in_owner = true
layout_mode = 2
columns = 2
hide_folding = true
select_mode = 1
